--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 plugins:
   - jekyll-seo-tag
-title: ""
-description: ""
-url: ""
+title: "ESPS Españoles en Squad"
+description: "ESPS es el mayor clan español de Squad. Nos centramos en el juego competitivo y participamos en numerosos torneos. Actividad ininterrumpida desde 2016."
+url: "https://napster653.github.io/esps/"
